<resources>
    <string name="app_name">ChatApp</string>
    <string name="signout">Sign out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_name">Your name</string>
    <string name="your_email">Your email</string>
    <string name="your_password">Your password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="forget_your_password">Forget your password ?</string>
    <string name="error_confirm_password">Confirm password must same as password</string>
    <string name="error_email">Write correct email</string>
    <string name="error_password">Password length must more than 8 characters</string>
    <string name="error_name">Write your name</string>
    <string name="register_new_account">Register new account ?</string>
    <string name="chat">Chat</string>
    <string name="users">Users</string>
    <string name="notification">Notification</string>
    <string name="logout_message">Are you sure to logout ?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
</resources>
